--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,19 @@
 name = "projeto-python"
 version = "0.1.0"
 description = ""
-authors = ["joao-coelho-ey <joao.coelho@br.ey.com>"]
+authors = ["JoaoPauloSousaCoelho <jpaulo.ufsj@gmail.com>"]
 readme = "README.md"
 packages = [{include = "projeto_python"}]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python =">=3.7.2,<4.0"
 
+
+[tool.poetry.group.dev.dependencies]
+blue = "^0.9.1"
+mkdocs = "^1.4.2"
+pytest = "^7.2.1"
+pip-audit = "^2.4.14"
 
 [build-system]
 requires = ["poetry-core"]
